--- a/udemy/bölüm-3/2.v-for.html
+++ b/udemy/bölüm-3/2.v-for.html
@@ -11,7 +11,7 @@
     <div id="app">
         <h1>v-for kullanımı</h1>
         <ul>
-            <li v-for="product in products"> {{product}} </li>
+            <li v-for="product in products" :key="product"> {{product}} </li>
         </ul>
 
         <ul>
